[package]
name = "parenv-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Macro implementation of #[derive(Environment)]"
repository = "https://github.com/frectonz/parenv"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
