[package]
name = "parenv-derive"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Macro implementation of #[derive(Environment)]"
repository = "https://github.com/frectonz/parenv"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.89"
