[package]
name = "parenv"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Environment variable parser with a clap style derive macro and elm style error reporting."
repository = "https://github.com/frectonz/parenv"
readme = "../README.md"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.1.0"
parenv-derive = { version = "0.1.1", path = "../parenv-derive" }
